// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Migrator test > getStatus > 각 db의 connections 확인 1`] = `
[
  {
    "connKey": "test",
    "connString": "mysql2://root@0.0.0.0:3306/miomock_test",
    "currentVersion": "20251124233609",
    "name": "test",
    "pending": [],
    "status": 0,
  },
  {
    "connKey": "fixture_remote",
    "connString": "mysql2://root@0.0.0.0:3306/miomock_fixture_remote",
    "currentVersion": "20251124233609",
    "name": "fixture_remote",
    "pending": [],
    "status": 0,
  },
  {
    "connKey": "development_master",
    "connString": "mysql2://root@0.0.0.0:3306/miomock",
    "currentVersion": "20251124233609",
    "name": "development",
    "pending": [],
    "status": 0,
  },
  {
    "connKey": "production_master",
    "connString": "mysql2://root@0.0.0.0:3306/miomock",
    "currentVersion": "20251124233609",
    "name": "production",
    "pending": [],
    "status": 0,
  },
]
`;

exports[`Migrator test > getStatus > 일부 DB 미적용 상태 확인 1`] = `
[
  0,
  0,
  0,
  0,
]
`;

exports[`Migrator test > preparedCodes 생성 > FK 추가 감지 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.alterTable("users", (table) => {
    // add
    table.integer("company_id").unsigned().notNullable();
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    // rollback - add
    table.dropColumns("company_id");
  });
}
",
    "table": "users",
    "title": "alter_users_add1",
    "type": "normal",
  },
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    table.foreign("company_id").references("companies.id").onUpdate("CASCADE").onDelete("CASCADE");
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    table.dropForeign(["company_id"]);
  });
}
",
    "table": "users",
    "title": "alter_users_foreigns",
    "type": "normal",
  },
]
`;

exports[`Migrator test > preparedCodes 생성 > 신규 테이블 감지 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.createTable("test_entities", (table) => {
    // columns
    table.increments().primary();
    table.timestamp("created_at").notNullable().defaultTo(knex.raw("CURRENT_TIMESTAMP"));
    table.string("name", 255).notNullable();
    table.text("description").nullable();
    table.uuid("uuid").nullable();

    // indexes
    table.unique(["uuid"]);
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.dropTable("test_entities");
}
",
    "table": "test_entities",
    "title": "create__test_entities",
    "type": "normal",
  },
]
`;

exports[`Migrator test > preparedCodes 생성 > 컬럼 삭제 감지 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.alterTable("users", (table) => {
    // drop columns
    table.dropColumns("deleted_at");
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    // rollback - drop columns
    table.datetime("deleted_at").nullable();
  });
}
",
    "table": "users",
    "title": "alter_users_drop1",
    "type": "normal",
  },
]
`;

exports[`Migrator test > preparedCodes 생성 > 컬럼 속성 변경 감지 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.alterTable("users", (table) => {
    // alter column
    table.datetime("deleted_at").notNullable().alter();
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    // rollback - alter column
    table.datetime("deleted_at").nullable().alter();
  });
}
",
    "table": "users",
    "title": "alter_users_alter1",
    "type": "normal",
  },
]
`;

exports[`Migrator test > preparedCodes 생성 > 컬럼 추가 감지 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.alterTable("users", (table) => {
    // add
    table.string("test_column", 256).notNullable();
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("users", (table) => {
    // rollback - add
    table.dropColumns("test_column");
  });
}
",
    "table": "users",
    "title": "alter_users_add1",
    "type": "normal",
  },
]
`;

exports[`Migrator test > preparedCodes 생성 > 코드 정렬 순서 1`] = `
[
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  await knex.schema.createTable("test_order_entities", (table) => {
    // columns
    table.increments().primary();
    table.timestamp("created_at").notNullable().defaultTo(knex.raw("CURRENT_TIMESTAMP"));
    table.string("name", 255).notNullable();
    table.integer("company_id").unsigned().notNullable();
    table.uuid("uuid").nullable();

    // indexes
    table.unique(["uuid"]);
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.dropTable("test_order_entities");
}
",
    "table": "test_order_entities",
    "title": "create__test_order_entities",
    "type": "normal",
  },
  {
    "formatted": "import type { Knex } from "knex";

export async function up(knex: Knex): Promise<void> {
  return knex.schema.alterTable("test_order_entities", (table) => {
    // create fk
    table.foreign("company_id").references("companies.id").onUpdate("CASCADE").onDelete("CASCADE");
  });
}

export async function down(knex: Knex): Promise<void> {
  return knex.schema.alterTable("test_order_entities", (table) => {
    // drop fk
    table.dropForeign(["company_id"]);
  });
}
",
    "table": "test_order_entities",
    "title": "foreign__test_order_entities__company_id",
    "type": "foreign",
  },
]
`;

exports[`Migrator test > runAction > apply > 단일(test)DB에 마이그레이션 적용 1`] = `
[
  {
    "applied": [],
    "batchNo": 2,
    "connKey": "test",
  },
]
`;

exports[`Migrator test > runAction() > rollback > 마지막 배치 롤백 1`] = `
[
  {
    "applied": [
      "20251124233609_foreign__project_tags__project_id_tag_id.ts",
      "20251124233608_foreign__projects__employees__employee_id_project_id.ts",
      "20251124233607_foreign__employees__user_id_department_id.ts",
      "20251124233606_foreign__departments__company_id_parent_id.ts",
      "20251124233605_create__project_tags.ts",
      "20251124233604_create__projects__employees.ts",
      "20251124233603_create__users.ts",
      "20251124233602_create__tags.ts",
      "20251124233601_create__projects.ts",
      "20251124233600_create__files.ts",
      "20251124233559_create__employees.ts",
      "20251124233558_create__departments.ts",
      "20251124233557_create__companies.ts",
    ],
    "batchNo": 1,
    "connKey": "test",
  },
]
`;
